# LogVision

./: README.md
src/: manage.py  pyproject.toml
src/logvision/: asgi.py  settings.py  urls.py  wsgi.py
src/logvision/accounts/: apps.py  urls.py  views.py
src/logvision/dashboard/: apps.py  urls.py  views.py
src/logvision/templates/: home.html  login.html
src/logvision/templates/base/: footer.html  head.html  scripts.html  sidebar.html  topbar.html
